--- a/argocd-manifests/test-app.yaml
+++ b/argocd-manifests/test-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: my-app
+  name: test-app
   namespace: argocd
 spec:
   project: default
@@ -11,7 +11,7 @@ spec:
     path: helm-chart/test-app
   destination:
     server: [https://kubernetes.default.svc](https://kubernetes.default.svc)
-    namespace: test-app-prod
+    namespace: nb-challenge
   syncPolicy:
     automated:
       prune: true
